--- a/README.adoc
+++ b/README.adoc
@@ -2,11 +2,11 @@
 
 [NOTE]
 ===============================
-*OASP, the Open Application Standard Platform, has been superseded by devonfw*, the Open Source Standard Software Development Platform for state of the art Cloud Native Micro Service and Multi Platform Rich Web Apps, supported by Capgemini.
+*OASP has been superseded by devonfw*, the Open Source Standard Software Development Platform for state of the art Cloud Native Micro Service and Multi Platform Rich Web Apps, supported by Capgemini.
 
 See http://devonfw.com and on Github http://github.com/devonfw
 
-Individual stacks within OASP haven been renamed to a corresponding stack in devonfw. 
+Individual products within OASP have been renamed to a corresponding one in devonfw. 
 
 For example:
 
@@ -14,9 +14,8 @@ For example:
 - OASP4js -> devon4ng
 - OASP4NET -> devon4NET
 
-devonfw® is an exclusive and registered (European Trademark) tool of Capgemini. Capgemini reserves all intellectual and industrial property rights over but licenses the product under the Apache License, Version 2 – like OASP-  which makes it 100% Open Source.
+devonfw® is an exclusive and registered (European Trademark) product of Capgemini. Capgemini reserves all intellectual and industrial property rights over devonfw but publishes it under the Apache License, Version 2 – like OASP-  which makes devonfw 100% Open Source.
 See: https://tldrlegal.com/license/apache-license-2.0-(apache-2.0)
-
 ===============================
 
 *Build status*
